Fix news alignment...

--- a/index.css
+++ b/index.css
@@ -8,6 +8,7 @@
     margin-top: -0.15em;
 }
 
-#news {
+#news-header {
     text-align: center;
+    margin-top: 2em;
 }
